# isro-rover

./: pyproject.toml
src/sample_detection_isro/: ROS.md  __main__.py  detect_cylinder.py  pose_det.py  ros_node.py  vis_lang_seg.py
