[tool.poetry]
name = "sample-detection-isro"
version = "0.1.0"
description = "Sample detection for ISRO Rover Bagheera"
authors = ["mohammad21saif <mohammad21@iiserb.ac.in>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.82"
ultralytics = "^8.2.28"
pillow = "^10.3.0"
torch = "^2.3.1"
torchvision = "^0.18.1"
transformers = "^4.41.2"
sentence-transformers = "^3.0.0"
timm = "^1.0.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
